# Z-Alpha-Risk-Management

./: .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  add_static_tickers.py  check_status.py  config.env.example  docker-compose.yml  download_fallback_data.py  init_portfolio.py  inject_sample_data.py  main.py  package-lock.json  pyproject.toml  run_backend.py  start_all.py  update_bull_data.py  verify_forecast_risk.py
backend/: add_static_tickers_data.py  complete_setup.py  config.py  export_database.py  fetch_portfolio_fundamentals.py  import_database.py  init_data.py  init_database.py  logging_config.py  run.py  setup_database.py  setup_database_with_options.py
backend/api/: main.py
backend/auth/: jwt_tokens.py  passwords.py
backend/database/: database.py
backend/quant/: __init__.py  concentration.py  correlation.py  cov.py  drawdown.py  linear.py  liquidity.py  realized.py  regime.py  returns.py  risk.py  rolling.py  scenario.py  scoring.py  stats.py  var.py  volatility.py  weights.py
backend/services/: cache.py  data_service.py  ibkr_client_portal.py  ibkr_service.py  market_data_service.py  portfolio_service.py  returns_service.py  ticker_info_service.py
backend/user_api/: main.py
backend/utils/: json_safe.py
data/: AAPL.json  AAPL_example.json  ADBE.json  AMD.json  AMZN.json  APP.json  BULL.json  CRM.json  DOMO.json  GOOGL.json  INTC.json  IWM.json  META.json  MSFT.json  MTUM.json  NFLX.json  NVDA.json  ORCL.json  QQQM.json  QUAL.json  RDDT.json  SGOV.json  SMCI.json  SNOW.json  TSLA.json  ULTY.json  VLUE.json  admin_portfolio.json  user_portfolio.json
deploy/: backend.yaml  frontend.yaml  namespace.yaml  postgres.yaml  user-api.yaml
docs/: architecture.html  flows.html
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html  manifest.json
landing/: README.md  package-lock.json  package.json
(+131 files in other folders)
